[tool.poetry]
name = "metalink"
version = "0.1.0"
description = "Add custom meta tags to any URL"
authors = ["Jayden Windle <jaydenwindle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-tailwind = "^2.0.1"
Pillow = "^8.2.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
gunicorn = "^20.1.0"
django-storages = "^1.11.1"
boto3 = "^1.17.62"

[tool.poetry.dev-dependencies]
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
